<resources>
    <string name="app_name">Admin</string>
    <string name="add">Add</string>
    <string name="load">Load</string>
    <string name="update">Update description</string>
    <string name="delete_description">Delete Description</string>
    <string name="delete_note">Delete Note</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="priority">Priority</string>
</resources>