<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleTextField"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/title" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descTextField"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/description" />

                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:text="@string/submit" />

                <Button
                    android:id="@+id/loadButton"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:text="@string/load" />

                <Button
                    android:id="@+id/updateButton"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:text="@string/update" />
                <Button
                    android:id="@+id/delDesc"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:text="@string/delete_description"/>

                <Button
                    android:id="@+id/delNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_note"/>

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/descTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</layout>